--- a/requirements.txt
+++ b/requirements.txt
@@ -16,11 +16,10 @@ PyYAML==3.12
 requests==2.11.1
 grequests==0.3.0
 simplejson==3.8.2
-six==1.10.0
+six==1.11.0
 Twisted==16.4.1
 tzlocal==1.2.2
-ujson==1.35
+#ujson==1.35
 ws4py==0.3.5
 zope.interface==4.3.2
 modbus-tk==0.5.8
-pint==0.8.1
