test agent to query historian

--- a/examples/TestAgent/config
+++ b/examples/TestAgent/config
@@ -1,5 +1,7 @@
 {
   #  vip identity of historian to query
   "historian_vip": "sqlhistorianagent-3.7.0_1",
+
+  # file to which results should be written
   "output": "/home/volttron/historian_out"
 }
